--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,48 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+header {
+  width: 100%;
+  margin: 0rem;
+  padding: 0rem 1rem;
+  display: flex;
+  align-items: center;
+  justify-content:space-around;
+  gap: 2rem;
+  background-color: #213547;
+}
+header h1{
+  font-size: 2rem;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.search-section{
+  display: flex;
+  gap: 1rem;
+  width: 70%;
+  align-items: center;
+  justify-content: space-between;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search-section form{
+  display: flex;
+  gap: 1rem;
+  flex: 3 0 10rem;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+form input{
+  height: 2rem;
+  align-self: center;
+  border-radius: 5px;
+  width: 100%;
+  border-style: none;
+}
+.search-section #search{
+  flex: 1;
+  max-width: 10rem;
 }
 
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+main{
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: space-between;
+  flex: 0.1;
 }
