--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
 header {
   width: 100%;
   margin: 0rem;
-  padding: 0rem 1rem;
   display: flex;
   align-items: center;
-  justify-content:space-around;
+  justify-content: space-around;
   gap: 2rem;
   background-color: #213547;
 }
-header h1{
-  font-size: 2rem;
+
+header h2 {
+  font-size: 1.5rem;
+  color: mintcream;
 }
 
-.search-section{
+.search-section {
   display: flex;
   gap: 1rem;
   width: 70%;
@@ -20,29 +21,31 @@ header h1{
   justify-content: space-between;
 }
 
-.search-section form{
+.search-section form {
   display: flex;
   gap: 1rem;
   flex: 3 0 10rem;
 
 }
 
-form input{
+form input {
   height: 2rem;
   align-self: center;
   border-radius: 5px;
   width: 100%;
   border-style: none;
 }
-.search-section #search{
+
+.search-section #search {
   flex: 1;
   max-width: 10rem;
 }
 
-main{
+main {
   display: flex;
   flex-direction: column;
   align-items: start;
   justify-content: space-between;
+  margin: 0rem;
   flex: 0.1;
 }
