--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300ita‌​lic,400italic,500,500italic,700,700italic,900italic,900);
+
 :root {
   color-scheme: light;
-  color: rgba(255, 255, 255, 0.87);
   background-color: #d4d4d4;
-
   font-family: 'Roboto', sans-serif;
-
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: start;
-  height: 100vh;
-  margin: 0rem;
 }
 
 a {
@@ -24,11 +16,13 @@ a:hover {
   color: #535bf2;
 }
 
+html,
 body {
-  height: 100vh;
-  width: 100vw;
-  background-color: gainsboro;
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  padding: 0px;
+  overflow-x: hidden;
 }
 
 button {
@@ -38,13 +32,15 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #4a3dff;
+  background-color: #6f9dff;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
   border-color: #646cff;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -55,9 +51,11 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
+
   a:hover {
     color: #747bff;
   }
+
   button {
     background-color: #f9f9f9;
   }
