Added form to create and update form created form component to accept input for create/update state modified item and item cards to show form when create and update updated item service to create item against the mock data

--- a/src/style/ItemCard.css
+++ b/src/style/ItemCard.css
@@ -12,6 +12,10 @@
     transform: scale(1.02);
 }
 
+.item-card:active {
+    background-color: #b3b3b34f;
+}
+
 .item-card .button-section {
     display: flex;
     flex-direction: row;
