--- a/src/style/Items.css
+++ b/src/style/Items.css
@@ -6,3 +6,21 @@
     gap: 2rem;
     justify-content: center;
 }
+
+.create-card {
+    border: 1px solid gray;
+    border-radius: 10px;
+    font-size: 5rem;
+    color: gray;
+    text-align: center;
+    align-content: center;
+}
+
+.create-card:hover {
+    box-shadow: 0 0 5px black;
+    transform: scale(1.02);
+}
+
+.create-card:active {
+    background-color: #b3b3b34f;
+}
