create page for recipe details added page element to disply recipe detail added service to fetch detailed recipe data from backend

--- a/src/style/RecipeCard.css
+++ b/src/style/RecipeCard.css
@@ -16,7 +16,7 @@
     background-color: #b3b3b34f;
 }
 
-.item-card button {
+.recipe-card button {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
